test/parse/relaxed/bad/secondvlinesection.sol
s SATISFIABLE
v -1
v 0
c some comments
v 2
v 0
